# php-serialize

./: .gitignore  cabal.sandbox.config  php-serialize.cabal
src/: PHPSerialize.hs
