name:                php-serialize
version:             0.1.0.1

license-file:        LICENSE
author:              Yury Pachin
maintainer:          yp@q1.ru

build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     PHPSerialize
  build-depends:       base >=4.6 && <4.7,
                       text,
                       attoparsec
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -W
